# cPlusPlusprojects

./: .gitignore
oop/lesson1/classwork/: main  main.cpp
oop/lesson1/homework/: main.cpp  main_2.cpp
oop/lesson10/classwork/: main.cpp  main_2_intrement_dicrement.cpp  main_3_simpel_operaror.cpp  main_4_assign.cpp
oop/lesson10/homework/: main  main.cpp
oop/lesson11/classwork/: main.cpp  main_2  main_2.cpp
oop/lesson12/classwork/: main.cpp
oop/lesson12/homework/: main.cpp
oop/lesson13/classwork/: header_3.h  main.cpp  main_2.cpp  main_3.cpp
oop/lesson14/classwork/: CMakeLists.txt
oop/lesson14/homework/: main.cpp
oop/lesson15/classwork/: CMakeLists.txt
oop/lesson16/homework/: CMakeLists.txt
oop/lesson17/classwork/: CMakeLists.txt
oop/lesson3/classwork/: main.cpp  main_2.cpp  main_3_oop_start.cpp  main_4.cpp
oop/lesson3/homework/: main.cpp
oop/lesson4/classwork/: main.cpp  main_2.cpp  main_3.cpp  main_4.cpp
oop/lesson5/classwork/: main  main.cpp
oop/lesson6/classwork/: main.cpp
oop/lesson6/homework/: Flat.h  NonActiveArea.h  Report.h  Roll.cpp  Roll.h  Room.h  Wall.h  main_2_practic.cpp  vector.h
oop/lesson7/classwork/: main  main.cpp
oop/lesson8/classwork/: Main_2_static.cpp  main.cpp  main_3_practic_1.cpp  main_4_practic_2.cpp
oop/lesson8/homework/: main.cpp
shag/course project/: filesystem_cstdlib_fstream.txt  main  main.cpp  ncurses.txt
shag/course project/sourcecode/: CMakeLists.txt  declarations.h  main.cpp  ncurses_interface.cpp  song_logistic.cpp
shag/lesson14/: exercise_1  tempCodeRunnerFile.cpp
(+213 files in other folders)
